fixed labels and contrasting issues

--- a/src/main.css
+++ b/src/main.css
@@ -1,4 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
+*{
+  color:#fff;
+}
+
 html {
   box-sizing: border-box;
   font-family:'Varela Round', sans-serif;
@@ -23,7 +27,7 @@ h2 {
 }
 
 body{
-  background-color: #B9BADB;
+  background-color: #252131;
   display:flex;
   flex-direction:column;
   justify-content: space-around;
@@ -37,9 +41,9 @@ body{
 }
 
 header, main {
-  background-color: #A396C3;
+  background-color:#131118;
   margin-bottom:0.5em;
-  border: .5rem solid #A396C3;
+  border: .5rem solid #131118;
 }
 
 header {
@@ -79,7 +83,7 @@ main {
 #filter-select{
   margin-top:0.3em;
 }
-#filter-select, .new-bookmark {
+#filter-select, .new-bookmark{
   background-color:#635078 ;
   border: 0;
   display: block;
